Modified text in css, added void element

--- a/main.css
+++ b/main.css
@@ -2,3 +2,7 @@ h1 {text-align: center;
 background-color: aqua;}
 
 body {background-color: black;}
+
+p {color: aliceblue;
+    text-align: center;
+}
